--- a/impex/build.properties
+++ b/impex/build.properties
@@ -1,64 +1,4 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-
-# -------------------------------------------------------------------
-#
-# T O R Q U E  C O N F I G U R A T I O N  F I L E
-#
-# $Id: build.properties,v 1.1 2007-10-21 07:57:26 abyrne Exp $
-#
-# -------------------------------------------------------------------
-# This file contains the most commonly used properties. For a
-# a complete list of build properties, please refer to:
-#   http://jakarta.apache.org/turbine/torque/properties-reference.xml
-# -------------------------------------------------------------------
-
-# -------------------------------------------------------------------
-#
-#  P R O J E C T
-#
-# -------------------------------------------------------------------
-# This is the name of your Torque project. Your non-Java generated
-# files will be named using the project name selected below. If your
-# project=killerapp then you will have a generated:
-#
-#   killerapp-schema.sql
-#
-# The custom is then to also rename your project XML schema from
-# project-schema.xml to killerapp-schema.xml. This is required
-# for a few targets such as datasql, datadump, and datadtd.
-# -------------------------------------------------------------------
-
 torque.project = kfs
-
-# -------------------------------------------------------------------
-#
-#  D A T A B A S E  S E T T I N G S
-#
-# -------------------------------------------------------------------
-# JDBC connection settings. This is used by the JDBCToXML task that
-# will create an XML database schema from JDBC metadata. These
-# settings are also used by the SQL Ant task to initialize your
-# Torque system with the generated SQL.
-#
-# sameJavaName
-#   If true, the JDBC task will set the javaName attribute for the tables
-#   and columns to be the same as SQL name.
-# -------------------------------------------------------------------
 
 #export.torque.database = oracle
 #export.torque.database.driver = oracle.jdbc.OracleDriver
@@ -67,8 +7,8 @@ torque.project = kfs
 #export.torque.database.schema=KULDBA
 #export.torque.database.password=kuldba
 
-#import.exclude.data.pattern=
-export.excluded.tables=
+export.table.name.filter=.*
+export.excluded.tables=KRSB_MSG_PYLD_T,KRNS_LOOKUP_RSLT_T,KRIM_PND.*,.*_MT,KRSB_MSG_QUE_T,KRSB_SVC_DEF_T
 export.start.table=
 
 #import.torque.database = mysql
@@ -78,21 +18,16 @@ export.start.table=
 #import.torque.database.schema=KULDBA
 #import.torque.database.password=kuldba
 
+#import.exclude.data.pattern=
+
 #import.admin.user=
 #import.admin.password=
 #import.admin.url = jdbc:mysql://localhost:3306/
 
-export.table.name.filter=.*
-
-torque.sameJavaName = false
-torque.useClasspath=true
 
 output.dir=../${torque.project}/${export.torque.database.user}
-
+torque.sameJavaName = false
+torque.useClasspath=true
 torque.output.dir=${output.dir}
 torque.schema.dir=${output.dir}
-
-drivers.directory = lib
-drivers.file.pattern=ojdbc*.jar,mysql*.jar
-
 torque.schema.doc.includes=schema.xml
