--- a/impex/impex-build.properties.sample
+++ b/impex/impex-build.properties.sample
@@ -22,9 +22,8 @@ torque.project = kfs
 svnroot=https://test.kuali.org/svn/
 svn.module=rice-cfg-dbs
 # use this Rice source for running with an embedded rice database (normal for development)
-svn.base=rice-kuali-client-db/branches/rice-release-1-0-1-br/
-# Use the branch below for installing the necessary empty tables when running a separate Rice instance 
-#svn.base=rice-client-db/branches/rice-release-1-0-1-br/
+svn.base=rice-kuali-client-db/branches/rice-release-1-0-1-1-br/
+
 torque.schema.dir=../../${svn.module}
 torque.sql.dir=${torque.schema.dir}/sql
 
@@ -36,18 +35,6 @@ svn.base.2=trunk
 torque.schema.dir.2=../../${svn.module.2}
 torque.sql.dir.2=${torque.schema.dir.2}/sql
 
-
-#
-# where to find JDBC drivers
-#
-drivers.directory = /java/drivers
-drivers.file.pattern=ojdbc*.jar,mysql*.jar
-#
-# used for packaging exports as necessary
-#
-target.zip=../kuldemo.zip
-source.zip=../kuldemo.zip
-
 #
 # You only need to edit these if you are exporting the database to XML
 #
@@ -57,6 +44,17 @@ export.torque.database.url = jdbc:oracle:thin:@localhost:1521:XE
 export.torque.database.user=kuldba
 export.torque.database.schema=KULDBA
 export.torque.database.password=kuldba
+
+# A single regex pattern which indicates the table objects to export
+#export.table.name.filter=
+
+# A list of regex patterns whose data should not be exported
+#export.excluded.tables=KRSB_MSG_PYLD_T,KRNS_LOOKUP_RSLT_T,KRIM_PND.*,.*_MT,KRSB_MSG_QUE_T,KRSB_SVC_DEF_T
+
+# If an import was interrupted during the data export, you can use this
+# property to restart the export from a given point
+# export.start.table=
+
 
 #
 # Modify these to match the database into which you are going to import
@@ -82,9 +80,6 @@ import.torque.database.password=kuldemo
 # uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
 # import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
-export.excluded.tables=KRSB_MSG_PYLD_T,KRNS_LOOKUP_RSLT_T,KRIM_PND.*,.*_MT,KRSB_MSG_QUE_T
-export.start.table=
-
 
 # set if you want to use the ant script to set up the users and schemas for the import
 # see build.properties for the commands that will be executed
@@ -103,33 +98,8 @@ import.admin.url = ${import.torque.database.url}
 # if using MySQL, you will need to remove the schema/database name from the end as below
 #import.admin.url=jdbc:mysql://localhost:3306
 
-# these are used by the bootstrapping mechanism
+# these are used by the bootstrapping mechanism on Oracle databases only
 oracle.usermaint.user=kulusermaint
 oracle.usermaint.password=kulusermaint
 
-# SQL statements used for creating and dropping users
-# 
-# THESE SHOULD NOT NEED TO BE MODIFIED 
-
-# Oracle commands
-
-oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${import.torque.database.user}' ); END;
-
-oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${import.torque.database.user}', '${import.torque.database.password}' ); END;
-
-oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${import.torque.database.user}' ); END;
-
-# MySQL commands
-
-mysql.create.user.command=CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY '${import.torque.database.password}'
-
-mysql.grant.command=GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION
-
-mysql.create.user.commands=${mysql.create.user.command}    
-    
-mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${import.torque.database.schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'\n\
-/\n\
-${mysql.grant.command}
-
-mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${import.torque.database.schema}
 
