Updated for custom DB output table.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7181 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/clover/build.xml
+++ b/clover/build.xml
@@ -326,6 +326,7 @@ MAX_ERRORS = 0
 	</target>
 
 	<target name="build-clover-customizations" depends="" description="--> Builds all code">
+		<mkdir dir="bin" />
 		<javac srcdir="src" destdir="bin" includeantruntime="true">
 			<include name="org/kuali/impex/clover/component/**"/>
 			<classpath refid="compile.classpath" />
