--- a/impex/impex-build-sample.properties
+++ b/impex/impex-build-sample.properties
@@ -83,6 +83,16 @@ post.import.workflow.ingester.launcher.ant.target=import-workflow-xml
 # property name which must be passed in to identify the directory for the stib which launches the ingester
 post.import.workflow.ingester.launcher.ant.xml.directory.property=workflow.dir
 
+post.import.workflow.ingester.jdbc.url.property=datasource.url
+post.import.workflow.ingester.username.property=datasource.username
+post.import.workflow.ingester.password.property=datasource.password
+post.import.workflow.ingester.additional.command.line=-Ddatasource.ojb.platform=Oracle9i \
+-Dbase.directory=/java \
+-Dis.local.build= \
+-Drice.ksb.batch.mode=true \
+-Ddont.filter.project.rice= \
+-Ddont.filter.project.spring.ide=
+
 #
 # Uncomment these for a local MySQL database
 #
