Restored some support for restarts and export data filters.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7185 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -17,7 +17,9 @@
  specific language governing permissions and limitations
  under the License.
 -->
-<project name="kuali_db_impex" default="help" basedir=".">
+<project name="kuali_db_impex" default="help" basedir="."
+	xmlns:rsel="antlib:org.apache.tools.ant.types.resources.selectors"
+    xmlns:rcmp="antlib:org.apache.tools.ant.types.resources.comparators">
 
 	<target name="help">
 		<echo>
@@ -122,6 +124,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	<target name="inittasks">
 
 		<taskdef resource="net/sf/antcontrib/antlib.xml">
+
 			<classpath>
 				<pathelement location="../lib/ant-contrib-1.0b3.jar" />
 			</classpath>
@@ -334,21 +337,33 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	        depends="check-import-properties,create-ddl,apply-ddl,pre-import-sql,import-data,import-data2,apply-constraint-ddl,post-import-sql"
 	        description="==> Main Import Task" />
 
+
 	<target name="pre-import-sql" if="pre.import.script.files">
+
 		<for list="${pre.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
+
 			<sequential>
 				<run-sql-file file="@{fileName}" />
+
 			</sequential>
 		</for>
+
 	</target>
 
+
+
 	<target name="post-import-sql" if="post.import.script.files">
+
 		<for list="${post.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
+
 			<sequential>
 				<run-sql-file file="@{fileName}" />
+
 			</sequential>
 		</for>
+
 	</target>
+
 
 	<target name="export"
 	        depends="check-export-properties,jdbc-to-xml,export-data,delete-temp-files"
@@ -447,13 +462,21 @@ Please place the jar file for this class in the lib directory and try again.
 		</sequential>
 	</macrodef>
 
+
 	<macrodef name="run-sql-file">
+
 		<attribute name="file" />
+
 		<sequential>
+
 			<echo>Running File: @{file}</echo>
+
 			<sql driver="${import.torque.database.driver}" classpathref="torque-classpath" url="${import.torque.database.url}" userid="${import.torque.database.user}" password="${import.torque.database.password}" keepformat="true" delimitertype="row" delimiter="/" src="@{file}" />
+
 		</sequential>
+
 	</macrodef>
+
 
 	<macrodef name="adminsql">
 		<attribute name="sql" />
@@ -765,12 +788,15 @@ OUTPUT_DUMPS = false
 	<target name="create-graph-files" depends="create-clover-config-file">
 		<!-- clean out existing format files -->
 		<mkdir dir="${torque.schema.dir}/graphs" />
+		<!--
 		<delete>
 			<fileset dir="${torque.schema.dir}/graphs">
 				<include name="*.xml"/>
 			</fileset>
 		</delete>
+		-->
 		<!-- create all new graph files -->
+		<!--
 		<create-table-export-graphs
     		driver="${export.torque.database.driver}"
     		url="${export.torque.database.url}"
@@ -781,6 +807,7 @@ OUTPUT_DUMPS = false
             createIfTableEmpty="false"
     		classpathref="torque-classpath"
     		/>
+    		-->
 		<!-- create all new graph files -->
 		<create-table-import-graphs
     		driver="${export.torque.database.driver}"
@@ -798,11 +825,39 @@ OUTPUT_DUMPS = false
 	<target name="run-export-graphs" depends="create-clover-config-file">
 		<mkdir dir="${torque.schema.dir}/data" />
 		<!-- clean out existing data files -->
-		<delete>
-			<fileset dir="${torque.schema.dir}">
-				<include name="data/*.txt"/>
-			</fileset>
-		</delete>
+		<if>
+			<isfalse value="${keep.data.files}" />
+			<then>
+				<delete>
+					<fileset dir="${torque.schema.dir}">
+						<include name="data/*.txt"/>
+					</fileset>
+				</delete>
+			</then>
+		</if>
+		<property name="schema.dir.abs.path" location="${torque.schema.dir}"/>
+		<path id="temp-export-graph-path">			
+			<sort>
+		    	<restrict>
+		    		
+    		        <fileset dir="${schema.dir.abs.path}/graphs" includes="*_export.grf.xml" />
+    		    	<rsel:compare when="ge" against="all">
+    		    		<control>
+    		    	        <resource name="${schema.dir.abs.path}/graphs/${export.start.table}" />
+    		    		</control>
+		    		</rsel:compare>
+		    	</restrict>
+				<rcmp:name />
+			</sort>
+		</path>
+		<!-- use for debugging the comparitor above -->
+		<!--
+		<pathconvert property="temp" refid="temp-export-graph-path" dirsep="," setonempty="true" />
+		<echo>${temp}</echo>
+		-->
+		<pathtofileset dir="${schema.dir.abs.path}/graphs" 
+					   pathrefid="temp-export-graph-path" 
+					   name="export-graph-fileset" />
 		<!-- export all data -->
 		<run-export-graphs verbose="true"
             driver="${export.torque.database.driver}"
@@ -811,10 +866,14 @@ OUTPUT_DUMPS = false
             password="${export.torque.database.password}"
             schemaname="${export.torque.database.schema}"
             classpathref="torque-classpath"
+			graphExclusionRegex="${export.excluded.tables}"
     		>
-			<fileset dir="${torque.schema.dir}/graphs">
-				<include name="*_export.grf.xml"/>
+			<fileset refid="export-graph-fileset" />
+			<!--
+			<fileset dir="${schema.dir.abs.path}/graphs/" includes="${temp}">				
+    			<filename regexp="${export.excluded.tables}" casesensitive="false" negate="true" />
 			</fileset>
+			-->
 		</run-export-graphs>
 	</target>
 
