Continuing cleanup of the impex tool when using clover.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7186 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/clover/build.xml
+++ b/clover/build.xml
@@ -175,6 +175,7 @@
         <taskdef name="create-table-formats" classname="org.kuali.impex.ant.CreateTableFormatsTask" classpathref="runtime.classpath" />
         <taskdef name="create-table-export-graphs" classname="org.kuali.impex.ant.CreateTableExportGraphsTask" classpathref="runtime.classpath" />
         <taskdef name="create-table-import-graphs" classname="org.kuali.impex.ant.CreateTableImportGraphsTask" classpathref="runtime.classpath" />
+        <taskdef name="create-table-formats-and-graphs" classname="org.kuali.impex.ant.CreateTableFormatsAndGraphsTask" classpathref="runtime.classpath" />
         <taskdef name="run-graph" classname="org.kuali.impex.ant.GraphRunTask" classpathref="runtime.classpath" />
 	</target>
 	
