--- a/impex/impex-build-sample.properties
+++ b/impex/impex-build-sample.properties
@@ -45,13 +45,14 @@ export.torque.database.user=kuldba
 export.torque.database.schema=KULDBA
 export.torque.database.password=kuldba
 
-# A single regex pattern which indicates the table objects to export
+# A single regex pattern which indicates the table objects to export - tables
+# which do not match this pattern will not be exported - structure or data
 #export.table.name.filter=
 
-# A list of regex patterns whose data should not be exported
-#export.excluded.tables=KRSB_MSG_PYLD_T,KRNS_LOOKUP_RSLT_T,KRIM_PND.*,.*_MT,KRSB_MSG_QUE_T,KRSB_SVC_DEF_T
+# A regex pattern for export graph files which should not be exported
+export.excluded.tables=KRSB_MSG_PYLD_T.*|KRNS_LOOKUP_RSLT_T.*|KRIM_PND.*|.*_MT_EXPORT.*|KRSB_MSG_QUE_T.*|KRSB_SVC_DEF_T.*|.*QRTZ.*TRIGGER.*
 
-# If an import was interrupted during the data export, you can use this
+# If the data export is interrupted, you can use this
 # property to restart the export from a given point
 # export.start.table=
 
